assets/css/main.css
/* ... */
.user-details {
    text-align: center;
    margin: 5px auto
}

#projects {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 90%;
    max-width: 960px;
    margin: 0 auto
}

@media only screen and (min-width:550px) {
    #projects {
        width: 80%
    }
}

.user-projects {
    margin: auto;
    width: 50%;
    border: 3px solid blue;
    padding: 10px;
}

.user-projects img {
    max-width: 100%;
    height: auto;
    border-radius: 5px
}

.user-projects h5 {
    margin: 0
}

.user-projects li {
    color: #1488CC;
    font-size: 1.1rem
}

.user-projects p {
    margin-right: 5px
}

@media only screen and (min-width:550px) {
    .contents {
        margin-left: 0;
        width: 48%
    }

    .contents,
    .contents-right {
        margin-top: -5%
    }

    .contents-right,
    .images-right {
        float: right;
        width: 48%
    }

    .images-right img {
        float: right
    }

    .images-left {
        float: left;
        width: 48%
    }

    .images-left img {
        float: left
    }
}

.project-link {
    display: inline-block;
    margin: 10px 0;
    padding: 5px;
    color: #1488CC;
    background-color: transparent;
    border: 1px solid #1488CC;
    border-radius: 10px;
    text-align: center;
    outline: 0;
    text-decoration: none;
    cursor: pointer;
    transition: color .3s ease-out, background-color .3s ease-out, border-color .3s ease-out
}

.project-link:active,
.project-link:hover {
    background-color: #5347a8;
    border-color: #5347a8;
    color: #fff;
    transition: color .3s ease-in, background-color .3s ease-in, border-color .3s ease-in
}

.footer {
    background: #1488CC;
    /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);
    /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #2B32B2, #1488CC);
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    padding: 10px 0;
    margin-top: 100px;
    text-align: center;
    color: #fff
}

.footer .love {
    color: red
}

.footer a {
    text-decoration: none;
    margin: 0;
    color: #fff
}

